Fix individual/organization radio wrapping on register form

--- a/app/assets/stylesheets/decidim/extras/_forms.scss
+++ b/app/assets/stylesheets/decidim/extras/_forms.scss
@@ -5,3 +5,12 @@
   display: block;
   color: $black;
 }
+
+.field-inline{
+  display: inline-block;
+  margin-left: 1rem;
+
+  &:first-of-type{
+    margin-left: 0;
+  }
+}
